--- a/src/components/menu-item/menu-item.scss
+++ b/src/components/menu-item/menu-item.scss
@@ -1,40 +1,61 @@
 .menu-item {
     min-width: 30%;
-    height: 240px;
+    height: 35vh;
     flex: 1 1 auto;
     display: flex;
     align-items: center;
     justify-content: center;
     border: 1px solid black;
     margin: 0 7.5px 15px;
-  
+    box-shadow: 1px 3px 6px 0px rgba(0, 0, 0, 0.8);
+    overflow: hidden; //This is to make the hover transform not flow out the menu-item container, making a zoom in effect
+    &:hover {
+        cursor: pointer;
+        //Any elecment when hovering with the class of .background-image inside menu-item will be enlarged
+        & .background-image {
+            transform: scale(1.2);
+            transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+        }
+    }
+    &.large {
+        height: 50vh;
+    }
+
     &:first-child {
-      margin-right: 7.5px;
+        margin-right: 7.5px;
     }
-  
+
     &:last-child {
-      margin-left: 7.5px;
+        margin-left: 7.5px;
     }
-  
+
+    .background-image {
+        height: 100%;
+        width: 100%;
+        background-position: center;
+        background-size: cover;
+    }
     .content {
-      height: 90px;
-      padding: 0 25px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      border: 1px solid black;
-  
-      .title {
-        font-weight: bold;
-        margin-bottom: 6px;
-        font-size: 22px;
-        color: #4a4a4a;
-      }
-  
-      .subtitle {
-        font-weight: lighter;
-        font-size: 16px;
-      }
+        height: 90px;
+        padding: 0 25px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid black;
+        background-color: white;
+        opacity: 0.7;
+        position: absolute;
+        .title {
+            font-weight: bold;
+            margin-bottom: 6px;
+            font-size: 22px;
+            color: #4a4a4a;
+        }
+
+        .subtitle {
+            font-weight: lighter;
+            font-size: 16px;
+        }
     }
 }
