--- a/src/components/collection-item/collectionItem.scss
+++ b/src/components/collection-item/collectionItem.scss
@@ -42,3 +42,11 @@
         }
     }
 }
+
+.modal.modal-wide .modal-dialog {
+    width: 100%;
+}
+
+.modal-wide .modal-body {
+    overflow-y: auto;
+}
